RESOLVED FIXED28211
Can't click and drag the media controller thumb
https://bugs.webkit.org/show_bug.cgi?id=28211
Summary Can't click and drag the media controller thumb
Simon Fraser (smfr)
Reported 2009-08-11 21:32:38 PDT
With TOT, the media slider doesn't move with the cursor when I mouse down and drag it over the controller. The media slider only updates it's position after I mouse up after I drag it. This is a regression on TOT since this doesn't happen on stock SL 10A342. This regression was caused by http://trac.webkit.org/changeset/46915 since it doesn't happen with previous checkin 46914. * STEPS TO REPRODUCE 1. Launch a nightly webkit build and go to http://www.mirageband.tv/Night%20and%20Day.mp3 2. Wait for entire file to load then pause it 3. Mouse down directly on the slider and drag the mouse to another section on the controller. Notice the slider doesn't move until you mouse up.
Attachments
patch (1.52 KB, patch)
2009-08-12 02:29 PDT, Hin-Chung Lam
simon.fraser: review-
patch + test (4.90 KB, patch)
2009-08-12 16:40 PDT, Hin-Chung Lam
no flags
Simon Fraser (smfr)
Comment 1 2009-08-11 21:33:14 PDT
Hin-Chung Lam
Comment 2 2009-08-12 02:29:08 PDT
Hin-Chung Lam
Comment 3 2009-08-12 02:33:15 PDT
The cause of the regression is that r46915 rejects non mouse actions and mouse actions not from left button. This logic caused trouble because it discards a lot of mouse move events during drag.
Simon Fraser (smfr)
Comment 4 2009-08-12 08:37:37 PDT
Comment on attachment 34647 [details] patch Patch looks reasonable but you can make a testcase; in DumpRenderTree, there is an eventSender API that you can use to synthesize mouse events. I think it's important to add a testcase so that this doesn't regress again.
Hin-Chung Lam
Comment 5 2009-08-12 10:29:19 PDT
OK, I'll provide a test case with fix shortly.
Hin-Chung Lam
Comment 6 2009-08-12 16:40:04 PDT
Created attachment 34703 [details] patch + test
Simon Fraser (smfr)
Comment 7 2009-08-12 17:06:41 PDT
Note that layout tests that use eventSender make assumptions about locations of buttons on the media controller that may not hold across platorms.
Eric Carlson
Comment 8 2009-08-12 17:09:33 PDT
https://bugs.webkit.org/show_bug.cgi?id=28220 will fix the problem Simon mentioned, but for now you may need to land platform specific test results.
Eric Seidel (no email)
Comment 9 2009-08-12 18:00:48 PDT
Comment on attachment 34703 [details] patch + test Clearing flags on attachment: 34703 Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog A LayoutTests/media/controls-drag-timebar-expected.txt A LayoutTests/media/controls-drag-timebar.html M WebCore/ChangeLog M WebCore/rendering/MediaControlElements.cpp Committed r47171 M WebCore/ChangeLog M WebCore/rendering/MediaControlElements.cpp A LayoutTests/media/controls-drag-timebar-expected.txt A LayoutTests/media/controls-drag-timebar.html M LayoutTests/ChangeLog r47171 = 5d54d4d1aa0dd34b843952ff291dcdbf59c39a24 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/47171
Eric Seidel (no email)
Comment 10 2009-08-12 18:00:52 PDT
All reviewed patches have been landed. Closing bug.
Dmitry Titov
Comment 11 2009-08-12 18:49:04 PDT
It turned out that expected.txt is different for windows so landed http://trac.webkit.org/changeset/47174 to split the results.
Note You need to log in before you can comment on or make changes to this bug.