2009-08-12  Alpha Lam  <hclam@chromium.org>

Reviewed by Simon Fraser.

        Fix regression for dragging the media controller thumb.
        https://bugs.webkit.org/show_bug.cgi?id=28211

        Add a layout test to make sure dragging the timebar thumb of media
        controls causes seeks.

        * media/controls-drag-timebar-expected.txt: Added.
        * media/controls-drag-timebar.html: Added.

2009-08-12  Alpha Lam  <hclam@chromium.org>

        Reviewed by Simon Fraser.

        Fix regression for dragging the media controller thumb.
        https://bugs.webkit.org/show_bug.cgi?id=28211

        Modified the conditions for rejecting events on the media controller
        to only rejecting mouse events not from the left button.

        Test: media/controls-drag-timebar.html

        * rendering/MediaControlElements.cpp:
        (WebCore::MediaControlTimelineElement::defaultEventHandler):

Canonical link: https://commits.webkit.org/38772@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47171 268f45cc-cd09-0410-ab3c-d52691b4dbfc